--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia-plugin-persistedstate": "^4.1.2",
     "sass": "^1.80.6",
     "sass-loader": "^16.0.3",
+    "sha1": "^1.1.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
