--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.7.7",
+    "element-china-area-data": "^6.1.0",
     "element-plus": "^2.8.7",
     "md5": "^2.3.0",
     "pinia": "^2.2.6",
